// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useClipboard should render Clipboard Component 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  cursor: pointer;
  background-color: #fff;
  border-width: 1px;
  color: #374151;
  font-weight: 500;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 5px;
  border-style: solid;
  border-color: #d2d6dc;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  outline: none;
  -webkit-transition: all 150 ms ease 0s;
  transition: all 150 ms ease 0s;
}

.c0:hover {
  background-color: #f9fafb;
}

.c0:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c0:active,
.c0[data-active=true] {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover,
.c0[aria-disabled=true],
.c0[aria-disabled=true]:focus,
.c0[aria-disabled=true]:hover {
  opacity: 0.4;
  cursor: not-allowed;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 16px;
  border-style: solid;
  border-color: #d2d6dc;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 32px;
  border-width: 1px;
  border-radius: 4px;
  -webkit-transition: all 250ms ease 0s;
  transition: all 250ms ease 0s;
  outline: none;
  width: 100%;
}

.c1:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(164,202,254,.45);
}

.c1:disabled,
.c1:disabled:focus,
.c1:disabled:hover,
.c1[aria-disabled=true],
.c1[aria-disabled=true]:focus,
.c1[aria-disabled=true]:hover {
  background-color: #EAEAEA;
  color: #8F8F8F;
  cursor: not-allowed;
}

<div>
  <button
    aria-busy="false"
    class="sc-AxjAm c0"
    role="button"
  >
    Copy
  </button>
  <input
    class="sc-AxjAm c1"
    data-testid="paste-field"
  />
</div>
`;

exports[`useDisclosure should render Disclosure Component 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  cursor: pointer;
  background-color: #fff;
  border-width: 1px;
  color: #374151;
  font-weight: 500;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 5px;
  border-style: solid;
  border-color: #d2d6dc;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  outline: none;
  -webkit-transition: all 150 ms ease 0s;
  transition: all 150 ms ease 0s;
}

.c0:hover {
  background-color: #f9fafb;
}

.c0:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c0:active,
.c0[data-active=true] {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover,
.c0[aria-disabled=true],
.c0[aria-disabled=true]:focus,
.c0[aria-disabled=true]:hover {
  opacity: 0.4;
  cursor: not-allowed;
}

<div>
  <button
    aria-busy="false"
    class="sc-AxjAm c0"
    role="button"
  >
    Open Drawer
  </button>
</div>
`;

exports[`useLocalStorage should render Local Storage Component 1`] = `
.c1 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  margin: 0;
  font-size: 16px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

.c0 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  cursor: pointer;
  background-color: #fff;
  border-width: 1px;
  color: #374151;
  font-weight: 500;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 5px;
  border-style: solid;
  border-color: #d2d6dc;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  outline: none;
  -webkit-transition: all 150 ms ease 0s;
  transition: all 150 ms ease 0s;
}

.c0:hover {
  background-color: #f9fafb;
}

.c0:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c0:active,
.c0[data-active=true] {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover,
.c0[aria-disabled=true],
.c0[aria-disabled=true]:focus,
.c0[aria-disabled=true]:hover {
  opacity: 0.4;
  cursor: not-allowed;
}

<div>
  <button
    aria-busy="false"
    class="c0"
    role="button"
  >
    Add To Count
  </button>
  <p
    class="c1"
  >
    You've clicked the button 
    0
     times.
  </p>
</div>
`;

exports[`useMedia should render Media Component 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  height: 100px;
  width: 100px;
}

<div>
  <div
    class="c0"
    data-testid="media-box"
  />
</div>
`;

exports[`useNetwork should render Network Component 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  margin: 0;
  font-size: 16px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

<div>
  <p
    class="c0"
  >
    Network 
    Online
  </p>
</div>
`;
